--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pluto-syntax-highlighting",
 	"displayName": "Pluto Syntax Highlighting",
-	"description": "",
+	"description": "Provides syntax highlighting for the Pluto language.",
 	"version": "0.0.0",
 	"publisher": "Calamity, Inc.",
 	"repository": "https://github.com/PlutoLang/Syntax-Highlighting",
