--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Provides syntax highlighting for the Pluto language.",
 	"version": "0.0.0",
 	"publisher": "Calamity, Inc.",
+	"icon": "icon.png",
 	"repository": "https://github.com/PlutoLang/Syntax-Highlighting",
 	"engines": {
 		"vscode": "^1.65.0"
