--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "pluto-syntax-highlighting",
 	"displayName": "Pluto Syntax Highlighting",
-	"description": "Provides syntax highlighting for the Pluto language.",
+	"description": "Provides syntax highlighting and snippets for the Pluto language.",
 	"version": "0.3.0",
 	"publisher": "Calamity, Inc.",
 	"icon": "icon.png",
