--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "pluto-syntax-highlighting",
 	"displayName": "Pluto Syntax Highlighting",
 	"description": "Provides syntax highlighting and snippets for Pluto, a Lua dialect.",
+	"keywords": ["Pluto language"],
 	"version": "0.3.3",
 	"publisher": "calamity-inc",
 	"icon": "icon.png",
