--- a/language-config.json
+++ b/language-config.json
@@ -2,5 +2,10 @@
 	"comments": {
 		"lineComment": "--",
 		"blockComment": ["--[[", "]]"]
+	},
+	// Keep in sync with Pluto.tmbundle/Preferences/Indentation Rules.tmPreferences
+	"indentationRules": {
+		"increaseIndentPattern": "(^\\s*\\$?\\b(((local)?[\\s\\w=]+)?function|repeat|else|elseif|if|while|class|pluto_class|enum|pluto_enum)\\b((?!\\bend\\b).)*$|^.*\\b(do|then)\\b((?!\\bend\\b).)*$|^.*\\{((?!\\}).)*$)",
+		"decreaseIndentPattern": "(^\\s*\\$?\\b(elsei|elseif|else|end|until)\\b.*$|^((?!\\{).)*\\}\\;?.*$)"
 	}
 }
