Add grammar regression tests

--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
 	"name": "pluto-syntax-highlighting",
 	"displayName": "Pluto Syntax Highlighting",
 	"description": "Provides syntax highlighting and snippets for Pluto, a Lua dialect.",
-	"keywords": ["Pluto language"],
+	"keywords": [
+		"Pluto language"
+	],
 	"version": "0.7.0",
 	"publisher": "calamity-inc",
 	"icon": "icon.png",
 	"repository": "https://github.com/PlutoLang/Syntax-Highlighting",
+        "scripts": {
+                "generate-baseline": "node scripts/generate-baseline.js",
+                "test": "node scripts/test-tokenization.js"
+        },
 	"engines": {
 		"vscode": "^1.65.0"
 	},
@@ -17,8 +23,12 @@
 		"languages": [
 			{
 				"id": "pluto",
-				"aliases": ["Pluto"],
-				"extensions": [".pluto"],
+				"aliases": [
+					"Pluto"
+				],
+				"extensions": [
+					".pluto"
+				],
 				"configuration": "./language-config.json",
 				"icon": {
 					"light": "icon.png",
@@ -54,5 +64,9 @@
 	"activationEvents": [
 		"onCommand:pluto-syntax-highlighting.run",
 		"onCommand:pluto-syntax-highlighting.lint"
-	]
+	],
+	"devDependencies": {
+		"vscode-oniguruma": "^2.0.1",
+		"vscode-textmate": "^9.2.0"
+	}
 }
