--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
-** linguist-detectable
-*.pluto -linguist-detectable
-*.php -linguist-detectable
+*.json linguist-detectable
+*.tmPreferences linguist-detectable
+*.code-snippets linguist-detectable
+*.tmSnippet linguist-detectable
+*.tmLanguage linguist-detectable
+*.plist linguist-detectable
+visual-*.* -linguist-detectable
 
 # Sublime Text Package
 .vs/ export-ignore
@@ -10,7 +14,7 @@ obj/ export-ignore
 Pluto.tmbundle/Snippets/*.code-snippets export-ignore
 *.png export-ignore
 *.json export-ignore
-visual-check.* export-ignore
+visual-*.* export-ignore
 *.pluto export-ignore
 *.js export-ignore
 *.pkgdef export-ignore
