Add a flat icon so .pluto files look more fitting in VS Code

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
 				],
 				"configuration": "./language-config.json",
 				"icon": {
-					"light": "icon.png",
-					"dark": "icon.png"
+					"light": "icon-flat.png",
+					"dark": "icon-flat.png"
 				}
 			}
 		],
